src/objects/Vacation_Request__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vacation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>RequestType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkingDays__c</fullName>
        <label>WorkingDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vacation Request</label>
    <nameField>
        <displayFormat>R-{0}</displayFormat>
        <label>Vacation Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PastDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(StartDate__c &lt; TODAY(), true, false)</errorConditionFormula>
        <errorMessage>Start date cannot be earlier than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartEndDates</fullName>
        <active>true</active>
        <errorConditionFormula>IF(StartDate__c &gt; EndDate__c, true, false)</errorConditionFormula>
        <errorMessage>Start date cannot be past the end date.</errorMessage>
    </validationRules>
</CustomObject>